# X11-notify

./: LICENSE  README.md  meson.build
src/: SDL-notify.c  X11-notify.c
